# py_utilities

./: .gitignore  README.html  README.md  ensure_exists_screen.py  libutils.cmake  linear_regression.py  merge_static_libs.py  rtn_opt_dates.py  update_json_file.py
CppGenerator/: CPPCSVGenerator.py  CPPGeneratorBase.py  CPPJsonGenerator.py  read_parameters_csv_base.hpp  read_parameters_json_base.cpp
CppGenerator/CppHeaderParser/: CppHeaderParser.py
examples/: CMakeLists.txt  csv_test.cpp  struct.h  test.json
examples/csv_parser/: CMakeLists.txt  compatibility.hpp  constants.hpp  csv.hpp  csv_reader.cpp  csv_reader.hpp  csv_row.cpp  csv_row.hpp  data_type.cpp  data_type.h
examples/csv_parser/internal/: csv_reader.cpp  csv_reader.hpp  csv_row.cpp  csv_row.hpp  data_type.cpp
examples/merge-static-libs/: CMakeLists.txt  bar.cpp  boo.cpp  compile.bat  libutils.cmake  main.cpp  merge_static_libs.py  struct.h
examples/struct/csv/: CMakeLists.txt  csv_reader.cpp  csv_reader.h  csv_writer.cpp  csv_writer.h  struct.h
examples/struct/rwjson/: CMakeLists.txt  read_json_parameters.cpp  read_json_parameters.h  read_parameters_json_base.hpp  save_json_parameters.cpp  save_json_parameters.h  save_parameters_json_base.hpp  struct.h
